src/styles.css
/* ... */
.col.s2 {
    width: 16.66666%;
}
.col.s3 {
    width: 24.99999%;
}
.col.s4 {
    width: 33.33333%;
}
.col.s5 {
    width: 41.66666%;
}
.col.s6 {
    width: 49.99999%;
}
.col.s7 {
    width: 58.33333%;
}
.col.s8 {
    width: 66.66666%;
}
.col.s9 {
    width: 74.99999%;
}
.col.s10 {
    width: 83.33333%;
}
.col.s11 {
    width: 91.66666%;
}
.col.s12 {
    width: 99.99999%;
}
@media (min-width: 601px) {
    .col.m1 {
        width: 8.33333%;
    }
    .col.m2 {
        width: 16.66666%;
    }
    .col.m3,
    .quarter {
        width: 24.99999%;
    }
    .col.m4,
    .third {
        width: 33.33333%;
    }
    .col.m5 {
        width: 41.66666%;
    }
    .col.m6,
    .half {
        width: 49.99999%;
    }
    .col.m7 {
        width: 58.33333%;
    }
    .col.m8,
    .twothird {
        width: 66.66666%;
    }
    .col.m9,
    .threequarter {
        width: 74.99999%;
    }
    .col.m10 {
        width: 83.33333%;
    }
    .col.m11 {
        width: 91.66666%;
    }
    .col.m12 {
        width: 99.99999%;
    }
}
@media (min-width: 993px) {
    .col.l1 {
        width: 8.33333%;
    }
    .col.l2 {
        width: 16.66666%;
    }
    .col.l3 {
        width: 24.99999%;
    }
    .col.l4 {
        width: 33.33333%;
    }
    .col.l5 {
        width: 41.66666%;
    }
    .col.l6 {
        width: 49.99999%;
    }
    .col.l7 {
        width: 58.33333%;
    }
    .col.l8 {
        width: 66.66666%;
    }
    .col.l9 {
        width: 74.99999%;
    }
    .col.l10 {
        width: 83.33333%;
    }
    .col.l11 {
        width: 91.66666%;
    }
    .col.l12 {
        width: 99.99999%;
    }
}
.rest {
    overflow: hidden;
}
.stretch {
    margin-left: -16px;
    margin-right: -16px;
}
.content,
.auto {
    margin-left: auto;
    margin-right: auto;
}
.content {
    max-width: 980px;
}
.auto {
    max-width: 1140px;
}
.cell-row {
    display: table;
    width: 100%;
}
.cell {
    display: table-cell;
}
.cell-top {
    vertical-align: top;
}
.cell-middle {
    vertical-align: middle;
}
.cell-bottom {
    vertical-align: bottom;
}
.hide {
    display: none !important;
}
.show-block,
.show {
    display: block !important;
}
.show-inline-block {
    display: inline-block !important;
}
@media (max-width: 1205px) {
    .auto {
        max-width: 95%;
    }
}

#jumbo-image {
    max-height: 20rem;
    /* TODO: Invert banner colors using CSS */
    filter: invert();
}

@media (max-width: 600px) {
    #nav-challenges,
    #nav-signup {
        display: none;
    }
    .modal-content {
        margin: 0 10px;
        width: auto !important;
    }
    .modal {
        padding-top: 30px;
    }
    .dropdown-hover.mobile .dropdown-content,
    .dropdown-click.mobile .dropdown-content {
        position: relative;
    }
    .hide-small {
        display: none !important;
    }
    .mobile {
        display: block;
        width: 100% !important;
    }
    .bar-item.mobile,
    .dropdown-hover.mobile,
    .dropdown-click.mobile {
        text-align: center;
    }
    .dropdown-hover.mobile,
    .dropdown-hover.mobile .btn,
    .dropdown-hover.mobile .button,
    .dropdown-click.mobile,
    .dropdown-click.mobile .btn,
    .dropdown-click.mobile .button {
        width: 100%;
    }
}
@media (max-width: 768px) {
    .modal-content {
        width: 500px;
    }
    .modal {
        padding-top: 50px;
    }
}
@media (min-width: 993px) {
    .modal-content {
        width: 900px;
    }
    .hide-large {
        display: none !important;
    }
    .sidebar.collapse {
        display: block !important;
    }
}
@media (max-width: 992px) and (min-width: 601px) {
    .hide-medium {
        display: none !important;
    }
}
@media (max-width: 992px) {
    .sidebar.collapse {
        display: none;
    }
    .main {
        margin-left: 0 !important;
        margin-right: 0 !important;
    }
    .auto {
        max-width: 100%;
    }
}
.top,
.bottom {
    position: fixed;
    width: 100%;
    z-index: 1;
}
.top {
    top: 0;
}
.bottom {
    bottom: 0;
}
.overlay {
    position: fixed;
    display: none;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 2;
}
.display-topleft {
    position: absolute;
    left: 0;
    top: 0;
}
.display-topright {
    position: absolute;
    right: 0;
    top: 0;
}
.display-bottomleft {
    position: absolute;
    left: 0;
    bottom: 0;
}
.display-bottomright {
    position: absolute;
    right: 0;
    bottom: 0;
}
.display-middle {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
}
.display-left {
    position: absolute;
    top: 50%;
    left: 0%;
    transform: translate(0%, -50%);
    -ms-transform: translate(-0%, -50%);
}
.display-right {
    position: absolute;
    top: 50%;
    right: 0%;
    transform: translate(0%, -50%);
    -ms-transform: translate(0%, -50%);
}
.display-topmiddle {
    position: absolute;
    left: 50%;
    top: 0;
    transform: translate(-50%, 0%);
    -ms-transform: translate(-50%, 0%);
}
.display-bottommiddle {
    position: absolute;
    left: 50%;
    bottom: 0;
    transform: translate(-50%, 0%);
    -ms-transform: translate(-50%, 0%);
}
.display-container:hover .display-hover {
    display: block;
}
.display-container:hover span.display-hover {
    display: inline-block;
}
.display-hover {
    display: none;
}
.display-position {
    position: absolute;
}
.circle {
    border-radius: 50%;
}
.round-small {
    border-radius: 2px;
}
.round,
.round-medium {
    border-radius: 4px;
}
.round-large {
    border-radius: 8px;
}
.round-xlarge {
    border-radius: 16px;
}
.round-xxlarge {
    border-radius: 32px;
}
.row-padding,
.row-padding > .half,
.row-padding > .third,
.row-padding > .twothird,
.row-padding > .threequarter,
.row-padding > .quarter,
.row-padding > .col {
    padding: 0 8px;
}
.container,
.panel {
    padding: 0.01em 16px;
}
/* ... */

